# sirius2017_theorem

./: .gitignore  README.md  proj.cabal
.stack-work/install/ed14a2f4/flag-cache/: ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.4.0-3Ila3ipRrWK3QKHiCX7j1i  intero-0.1.20  proj-0.1.0.0-B4EokiQJmtYJtEnGQjIIKx  syb-0.6-IcoSwlPi2Nx4zSqMmorFPS
.stack-work/install/ed14a2f4/lib/x86_64-windows-ghc-8.0.2/proj-0.1.0.0-B4EokiQJmtYJtEnGQjIIKx/: Lib.hi  Reduce.hi  Type.hi
.stack-work/install/ed14a2f4/pkgdb/: package.cache  proj-0.1.0.0-B4EokiQJmtYJtEnGQjIIKx.conf
app/: Main.hs  Main.sublime-workspace
src/: Check.hs  Context.hs  Error.hs  Lawer.hs  LawerHL.hs  Lib.hs  Pretty.hs  Reduce.hs  Substitution.hs  Type.hs
src/Lawer/: Check.hs  Context.hs  Error.hs  Parser.hs  Pretty.hs  Reduce.hs  Sugar.hs  Type.hs
src/LawerHL/: Encoding.hs  Parser.hs  ParserHL.hs  Pretty.hs  Type.hs
src/LawerSTD/: STD.law
test/: Spec.hs  Std.hs  TestParser.hs  TestParserHL.hs
