name:                proj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/proj#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lawer
                     , LawerHL
  other-modules:       Lawer.Type
                     , Lawer.Reduce
                     , Lawer.Check
                     , Lawer.Error
                     , Lawer.Context
                     , Lawer.Pretty
                     , Lawer.Parser
                     , LawerHL.Type
                     , LawerHL.Pretty					 
                     , LawerHL.Parser
                     , LawerHL.Encoding
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , transformers
                     , megaparsec
  default-language:    Haskell2010

executable repl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , proj
                     , haskeline
                     , transformers
                     , optparse-generic
  default-language:    Haskell2010

executable scaner
  hs-source-dirs:      app
  main-is:             FileReader.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , proj
                     , haskeline
                     , transformers
                     , optparse-generic
                     , text
                     , megaparsec
  default-language:    Haskell2010

test-suite proj-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Std
  build-depends:       base
                     , proj
                     , text
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- test-suite parse-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             TestParser.hs
--   build-depends:       base
--                      , proj
--                      , text
--                      , hspec
--                      , megaparsec
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

test-suite parse-hl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestParserHL.hs
  build-depends:       base
                     , proj
                     , text
                     , hspec
                     , megaparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/proj
